changes to links

--- a/views/partials/clinician_sidebar.hbs
+++ b/views/partials/clinician_sidebar.hbs
@@ -5,19 +5,19 @@
         </div>
         <ul class="panel-sidebar-menu">
             <li>
-                <a href="./dashboard">
+                <a href="./clinician_dashboard">
                     <span class="menu-icon"><i class="material-icons">dashboard</i></span>
                     <span class="menu-title">Dashboard</span>
                 </a>
             </li>
             <li>
-                <a href="./profile">
+                <a href="./clinician_profile">
                     <span class="menu-icon"><i class="material-icons">person</i></span>
                     <span class="menu-title">Profile</span>
                 </a>
             </li>
             <li>
-                <a href="./patient_comments">
+                <a href="./clinician_patients_comments">
                     <span class="menu-icon"><i class="material-icons">message</i></span>
                     <span class="menu-title">Patient comments</span>
                 </a>
