--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -69,6 +69,10 @@ body {
     padding: 8px;
 } */
 
+.size-half\@p{
+    width: 4.16%;
+}
+
 .size-1\@p {
     width: 8.33%;
 }
@@ -142,6 +146,10 @@ body {
         display: flex !important;
     }
 
+    .size-half\@t{
+        width: 4.16%;
+    }
+
     .size-1\@t {
         width: 8.33%;
     }
@@ -203,6 +211,10 @@ body {
 
     .wt-visible-flex\@d {
         display: flex !important;
+    }
+
+    .size-half\@d{
+        width: 4.16%;
     }
 
     .size-1\@d {
@@ -835,4 +847,36 @@ ul {
 .wt-datatable td {
     padding: 8px;
     border: 1px solid #646464;
+}
+
+#horizontal_scroll_card{
+    box-shadow:none;
+    border-radius: var(--border-radius);
+    margin-top: 5px;
+    font-size: 15px;
+    line-height: 18px;
+    padding: 12px;
+    border: none;
+    background-color: #f5f5f5;
+    width: calc(100% - 20px);
+    white-space: nowrap;
+    overflow-x:scroll;
+}
+
+#vertical_scroll_card{
+    box-shadow:none;
+    border-radius: var(--border-radius);
+    margin-top: 5px;
+    font-size: 15px;
+    line-height: 18px;
+    padding: 12px;
+    border: none;
+    background-color: #f5f5f5;
+    width: calc(100% - 30px);
+    word-wrap: break-word; 
+    overflow-y:auto;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
