Patient Comments page

--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -880,3 +880,9 @@ ul {
 ::-webkit-scrollbar {
     display: none;
 }
+
+#display_flex_center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
