--- a/views/clinician_profile.hbs
+++ b/views/clinician_profile.hbs
@@ -3,8 +3,8 @@
     <div class="wt-grid-container">
 
         {{!-- Profile Picture --}}
-        <div class="wt-grid-item size-5@t" style="display: flex; align-items: center; justify-content: center;">
-            <div class="wt-grid-item size-12@t" style="display: flex; align-items: center; justify-content: center;">
+        <div class="wt-grid-item size-5@t" id="display_flex_center">
+            <div class="wt-grid-item size-12@t" id="display_flex_center">
                 <img class="wt-border-circle" src="/assets/img/doctor.jpg" id="clinician_img" width="180px" height="180px" style="cursor: pointer;" onclick="openModal('UpdateProfilePictureModal')">
             </div>
             <div class="wt-grid-item size-12@t" style="">
@@ -14,7 +14,7 @@
         </div>
 
         {{!-- Bio Box --}}
-        <div class="wt-grid-item size-7@t" style="display: flex; align-items: center; justify-content: center;">
+        <div class="wt-grid-item size-7@t" id="display_flex_center">
             <div class="wt-card" style="height: 90%; width: 90% ">
                 <div class="wt-grid-item size-12@t" style="height: 100%">
                     <div class="wt-grid-container" style="padding: 5px;">
