--- a/views/clinician_patients_comments.hbs
+++ b/views/clinician_patients_comments.hbs
@@ -1,6 +1,70 @@
 {{> clinician_sidebar}}
 {{> header}}
 <div class="panel-content">
-    patient_comments
+    <div class="wt-grid-container">
+
+        {{!-- Heading--}}
+        <div class="wt-grid-item size-12@t">
+            <h1>Comments</h1>
+        </div>
+
+        <div class="wt-grid-item size-12@t">
+            <div class="wt-card-content">
+                <div class="wt-grid-container">
+                    <div class="wt-grid-item size-2@t" style="padding-left: 5%;">
+                        <strong>Date</strong>
+                    </div>
+                    <div class="wt-grid-item size-3@t" style="padding-left: 5%;">
+                        <strong>Full name</strong>
+                    </div>
+                    <div class="wt-grid-item size-3@t" style="padding-left: 5%; padding-right:2.5%;">
+                        <strong>Health Data Label</strong>
+                    </div>
+                    <div class="wt-grid-item size-4@t" style="text-align: center;">
+                        <strong>Comments</strong>
+                    </div>
+                </div>
+            </div>   
+
+            {{!-- {{#each patients}} --}}
+            <div class="wt-card">
+                <div class="wt-card-content">
+                    <div class="wt-grid-container">
+                        {{!-- <div class="wt-grid-item size-1@t">
+                            <img class="wt-border-rounded" src="/assets/img/patient_img.png" width="40px">
+                        </div> --}}
+                        <div class="wt-grid-item size-2@t" style="padding-left: 5%;" >
+                            data
+                        </div>
+                        <div class="wt-grid-item size-3@t">
+                            <div class="wt-grid-container">
+                                <div class="wt-grid-item size-3@t" style="padding: 0%;">
+                                    <img class="wt-border-rounded" src="/assets/img/patient_img.png" width="40px">
+                                </div>
+                                <div class="wt-grid-item size-9@t" style="padding: 0%; padding-top:2.5%">
+                                    Jean Vera
+                                    {{!-- {{firstName}} {{lastName}} --}}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="wt-grid-item size-3@t" style="text-align:center; padding-right: 5%;">
+                            data
+                        </div>
+                        <div class="wt-grid-item size-4@t" style="padding: 0%;">
+                            <div class="wt-grid-item size-12@t">
+                                <div class ="wt-card" id="vertical_scroll_card" style="height: 70px; padding:15px">
+                                    Comments here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br/>
+            {{!-- {{/each}}  --}}
+        </div>
+
+
+    </div>
 </div>
    
